tests/fixtures/invalid_programs/undefined_var.fox
# Program dengan variabel yang tidak terdefinisi
biar x = 5
tulis(y)
